--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ PORT=4000
 
 # Origem permitida para CORS (GitHub Pages do NEURA OS, por exemplo)
 CORS_ORIGIN=https://vinicostasc01.github.io
+
+# Chave da API da OpenAI (NUNCA commitar sua chave real)
+OPENAI_API_KEY=coloque_sua_chave_aqui
